ingress_controller/frontend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: frontend-service
  
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 5678
